--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil | Arc-En-Miel</title>
+  <title>Accueil 2| Arc-En-Miel</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,8 +32,8 @@
     }
 
     .crypto-button {
-      background: #1a1a1a;
-      color: #fff;
+      background: #0f0f0f;
+      color: #ffffff;
       text-decoration: none;
       padding: 20px;
       border-radius: 12px;
@@ -44,18 +44,6 @@
       justify-content: center;
       flex-direction: column;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
-
-    .crypto-button:hover {
-      background: #FF9900;
-      color: #000;
-      transform: translateY(-3px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.5);
-    }
-
-    .crypto-icon {
-      font-size: 32px;
-      margin-bottom: 10px;
     }
 
     footer {
@@ -85,8 +73,11 @@
 
   <h1>Où je peux retrouver tes sites, YouTube... ?</h1>
   <p>⏬ Juste ici ⏬</p>
+
+  <a href="https://xno.click/youtubearc" class="crypto-button" style="color:#FE0133;">YouTube</a>
+  <a href="https://xno.click/githubarc" class="crypto-button" style="color:#1B1E22;">GitHub Offielle</a>
+
   <a href="https://xno.click/youtubearc" style="color:#FE0133;">YouTube</a>
-  <a href="https://xno.click/githubarc" style="color:#1B1E22;">GitHub Offielle</a>
   <a href="https://xno.click/githubarc" style="color:#1B1E22;">GitHub Offielle</a>
     
   <footer>
