--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     }
 
     .crypto-button {
-      background: #0f0f0f;
+      background: #AD9897;
       color: #ffffff;
       text-decoration: none;
       padding: 20px;
-      border-radius: 12px;
+      border-radius: 25px;
       font-weight: bold;
       transition: all 0.2s;
       display: flex;
@@ -74,16 +74,14 @@
   <h1>Où je peux retrouver tes sites, YouTube... ?</h1>
   <p>⏬ Juste ici ⏬</p>
 
-  <a href="https://xno.click/youtubearc" class="crypto-button" style="color:#FE0133;">YouTube</a>
-  <a href="https://xno.click/githubarc" class="crypto-button" style="color:#1B1E22;">GitHub Offielle</a>
+  <a href="https://xno.click/youtubearc" class="crypto-button" style="color:#FE0133;">YouTube*</a>
+  <a href="https://xno.click/githubarc" class="crypto-button" style="color:#1B1E22;">GitHub Offielle*</a>
 
   <a href="https://xno.click/youtubearc" style="color:#FE0133;">YouTube</a>
   <a href="https://xno.click/githubarc" style="color:#1B1E22;">GitHub Offielle</a>
     
   <footer>
-  Arc-en-Miel |
-  Les liens passent par xno.click (ça m’aide un peu, rien ne change pour toi !) | DISCLAIMER : Je ne suis pas affilié à xno.click ni aux faucets listés,
-  ce sont des sites externes. | DISCLAIMER² : Certains liens peuvent être affiliés (ex : Nanswap).
+  Arc-en-Miel | *Les liens passent par xno.click (ça m’aide un peu, rien ne change pour toi !) | DISCLAIMER : Je ne suis pas affilié à xno.click.
   <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">GitHub</a>
   <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">YouTube : @Arc-En-Miel</a>
 </footer>
