--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     .crypto-button {
-      background: #AD9897;
+      background: #1E414F;
       color: #ffffff;
       text-decoration: none;
       padding: 10px 14px;
@@ -45,6 +45,11 @@
       flex-direction: column;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     }
+    
+    p {
+    margin: 6px 0;
+    line-height: 1.4;
+   }
 
     .content {
   max-width: 1800px;     /* largeur propre */
@@ -70,25 +75,46 @@
   <p>La majoriter du code et des autres sites webs on était générer par IA, je n'ai aucune réelle connaisance en HTML ou toute autre language de programation.</p>
   <p>Cependant, une grosse partie du code est modifier par mes propres soins.</p>
   
-  <h1>Les autres sites ? Comment sa ?</h1> 
-  <p>Sur mon GitHub, tu pourra y retrouver des sites baser sur la cryptomonnaie.</p>
-  <p>Il y a, a l'heure actuelle;</p>
-  <p>- Un site où tu peux me faire des dons en cryptomonnaie;</p>
-  <p>- Un site où tu pourra y retrouver des faucets pour les cryptomonnaie prise en charge sur mon site de dons.</p>
-  <p>❗ Attention, vous n'est pas obliger de faire don des cryptos que vous avez trouver via mon site de faucet, ce site est là pour aider les débutant et les fans qui n'ont pas les moyens direct de me faire des dons ❗</p>
-  <p>❗ Aucune obligation de tout me donner, voir même aucune obligation de donner. ❗</p>
+  <h1>Les autres sites ?</h1>
+
+<p>
+Sur mon GitHub, tu peux retrouver plusieurs petits sites liés à la cryptomonnaie.
+</p>
+
+<p>
+Pour l’instant, il y a :
+</p>
+
+<ul>
+  <li>Un site où tu peux me faire des dons en cryptomonnaie</li>
+  <li>Un site qui regroupe des faucets pour les cryptos prises en charge sur le site de dons</li>
+</ul>
+
+<p>
+❗ Tu n’es absolument pas obligé de faire des dons avec les cryptos trouvées via le site de faucets.
+Ce site est surtout là pour aider les débutants et les personnes qui n’ont pas forcément les moyens de donner directement.
+</p>
+
+<p>
+❗ Aucune obligation de tout donner… ni même de donner tout court.
+</p>
+
 
   <h1>Où je peux retrouver tes sites, YouTube... ?</h1>
   <p>⏬ Juste ici ⏬</p>
 
   <a href="https://xno.click/youtubearc" class="crypto-button" style="color:#FE0133;">YouTube*</a>
   <a href="https://xno.click/githubarc" class="crypto-button" style="color:#1B1E22;">GitHub Offielle*</a>
+  <a href="https://xno.click/DonARC" class="crypto-button" style="color:#DB4040;">Don*</a>
+  <a href="https://xno.click/FaucetARC" class="crypto-button" style="color:#0BA0DB;">Faucet*</a>
   </div>
   
   <footer>
   Arc-en-Miel | *Les liens passent par xno.click (ça m’aide un peu, rien ne change pour toi !) | DISCLAIMER : Je ne suis pas affilié à xno.click.
   <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">GitHub</a>
-  <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">YouTube : @Arc-En-Miel</a>
+  <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">YouTube</a>
+  <a href=""
+  <a style="color:#0f0f0f;">V.003</a>
 </footer>
 
 </body>
