--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ Ce site est surtout là pour aider les débutants et les personnes qui n’ont p
   
   <footer>
   
-  Arc-en-Miel | *Les liens passent par xno.click (ça me soutient un peu 💛, rien ne change pour toi !) | Je ne suis pas affilié à xno.click | 
-  <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">GitHub |</a>
-  <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;"> YouTube</a>
-  <a style="color:#0f0f0f;">V.003</a>
+  Arc-en-Miel | *Les liens passent par xno.click (ça me soutient un peu 💛, rien ne change pour toi !) | Je ne suis pas affilié à xno.click 
+  <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">| GitHub </a>
+  <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">| YouTube</a>
+  <a style="color:#0f0f0f;">V.005</a>
 </footer>
 
 </body>
