Update headings and version number in index.html

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 </head>
 <body>
   <div class="content">
-  <h1>Qui suis-je ?</h1>
+  <h1>Qui est tu ?</h1>
   <p>Eh bien salut, je suis Arc-En-Miel, YouTuber baser gaming (avec 1 vidéo par trimestre si j'ai pas la flemme) de 18 ans baser en France.</p>
-  <p>Pationner et intriger par les cryptomonnaie, du Hardware PC en générale, et de la programation.</p>
+  <p>Pationner et intriguer par les cryptomonnaie, du Hardware PC en générale, et de la programation.</p>
   
   <h1>Quel est ce site ?</h1>
   <p>Contrairement au autres créateur de contenue, ceci est mon propre site basé sur GitHub Pages.</p>
@@ -114,7 +114,7 @@ Ce site est surtout là pour aider les débutants et les personnes qui n’ont p
   Arc-en-Miel | *Les liens passent par xno.click (ça me soutient un peu 💛, rien ne change pour toi !) | Je ne suis pas affilié à xno.click 
   <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">| GitHub </a>
   <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">| YouTube</a>
-  <a style="color:#0f0f0f;">V.005</a>
+  <a style="color:#0f0f0f;">V1.006</a>
 </footer>
 
 </body>
