Update version and add new links in index.html

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@ Pour l’instant, il y a :
 </p>
 
 <ul>
-  <li>Un site où tu peux me faire des dons en cryptomonnaie</li>
-  <li>Un site qui regroupe des faucets pour les cryptos prises en charge sur le site de dons</li>
+  <li>Un site où tu peux me faire des dons en cryptomonnaie;</li>
+  <li>Un site qui regroupe des faucets pour les cryptos prises en charge sur le site de dons;</li>
+  <li>Le club Brawl Stars, où tu peux me retrouver moi et Lusrusur.</li>
 </ul>
 
 <p>
@@ -107,6 +108,7 @@ Ce site est surtout là pour aider les débutants et les personnes qui n’ont p
   <a href="https://xno.click/githubarc" class="crypto-button" style="color:#1B1E22;">GitHub Offielle*</a>
   <a href="https://xno.click/DonARC" class="crypto-button" style="color:#DB4040;">Don*</a>
   <a href="https://xno.click/FaucetARC" class="crypto-button" style="color:#0BA0DB;">Faucet*</a>
+  <a href="https://xno.click/brawlstars" class="crypto-button" style="color:#f5bc00;">Brwal Stars*</a>
   </div>
   
   <footer>
@@ -114,7 +116,7 @@ Ce site est surtout là pour aider les débutants et les personnes qui n’ont p
   Arc-en-Miel | *Les liens passent par xno.click (ça me soutient un peu 💛, rien ne change pour toi !) | Je ne suis pas affilié à xno.click 
   <a href="https://github.com/Arc-En-MielYT" style="color:#FF9900;">| GitHub </a>
   <a href="https://youtube.com/@Arc-En-Miel" style="color:#FF9900;">| YouTube</a>
-  <a style="color:#0f0f0f;">V1.006</a>
+  <a style="color:#0f0f0f;">V1.007</a>
 </footer>
 
 </body>
